--- a/src/sdk/seq_sdk/makefile
+++ b/src/sdk/seq_sdk/makefile
@@ -15,10 +15,10 @@ test : $(test_o)
 	g++  -o $@  $(test_o) -L. -L$(HOME)/lib  -lseq_uhp -lpthread -luhp_mysql
 
 .cpp.o	:
-	g++ -g -fPIC -O2 -Wno-write-strings -o $@ -c $< -I. -I/usr/include/mysql -I/usr/include -I$(HOME)/include
+	g++ -g -fPIC -O2 -Wall -Werror -Wno-write-strings  -o $@ -c $< -I. -I/usr/include/mysql -I/usr/include -I$(HOME)/include
 
 .c.o	:
-	gcc -std=gnu99 -g -fPIC -O2 -Wno-write-strings  -o $@ -c $< -I. -I/usr/include/mysql -I/usr/include -I$(HOME)/include
+	gcc -std=gnu99 -g -fPIC -O2 -Wall -Werror -Wno-write-strings   -o $@ -c $< -I. -I/usr/include/mysql -I/usr/include -I$(HOME)/include
 
 clean	:
 	rm -f *.so *.o
